--- a/agent.ipynb
+++ b/agent.ipynb
@@ -845,23 +845,22 @@
    "id": "7b55bb5e",
    "metadata": {},
    "source": [
-    "### Statistical Validation (Block Bootstrap)\n",
+    "###  Statistical Validation (Block Bootstrap)\n",
     "\n",
-    "Asset prices follow an underlying probability distribution, and our historical data represents just one single realization of that distribution. As such, the agent's strong performance on the test set could theoretically be due to a \"lucky draw\" of market conditions rather than genuine skill.\n",
+    "Asset prices follow an underlying probability distribution, and our historical data represents just one single realization of that distribution. The agent's performance could theoretically be due to a \"lucky draw\" of specific market conditions.\n",
     "\n",
-    "Ideally, I would fit a generative model to the market data and run Monte Carlo simulations to test the agent on thousands of alternative price paths. However, given the complexity of accurately modeling market microstructure (too much work for a pet project😂), I resort to a robust alternative: Block Bootstrapping.\n",
+    "Ideally, we would fit a generative model to run Monte Carlo simulations on thousands of alternative price paths (too much work for a pet project). However, given the complexity of modeling market microstructure, we resort to a robust alternative: **Block Bootstrapping**.\n",
     "\n",
     "**Methodology:**\n",
-    "I model how the agent would perform if its observed returns occurred in a different sequence. This is critical because in finance, when a return happens  matters just as much as its magnitude.\n",
-    "* **Block Resampling:** I resample the agent's returns in 10-day blocks to preserve local volatility correlations (autocorrelation).\n",
-    "* **Simulation:** I generate 10,000 synthetic equity growth curves to build a probability distribution of the Sharpe Ratio.\n",
-    "* **Hypothesis Test:** I check if the 95% Confidence Interval (CI) includes zero. If the lower bound is $>0$, I have statistical significance.\n",
+    "We generate 10,000 synthetic market scenarios by resampling the agent's returns **with replacement**. This tests if the strategy's edge persists even in \"unlucky\" universes where favorable regimes occur less frequently than observed history.\n",
+    "* **Block Sampling:** We sample in **10-day blocks** (rather than single days) to preserve local volatility clustering and market momentum, ensuring the synthetic data remains realistic.\n",
+    "* **Hypothesis Test:** We build a probability distribution of the Sharpe Ratio. If the 95% Confidence Interval (CI) is strictly positive, we confirm the result is not random noise.\n",
     "\n",
     "**Results:**\n",
     "The analysis confirms the agent's skill is statistically significant:\n",
     "* **Observed Sharpe:** 2.46\n",
     "* **95% Confidence Interval:** $[0.87, 3.75]$\n",
-    "* **Conclusion:** Since the lower bound (0.87) is strictly positive, I can reject the null hypothesis that the agent's returns are random noise with **>95% confidence**."
+    "* **Conclusion:** Since the lower bound (0.87) is strictly positive, we reject the null hypothesis that the agent's returns are random noise with **>95% confidence**."
    ]
   },
   {
